refactor(378): create StudentProgress seeder and resolve tests failed